--- a/app/globals.css
+++ b/app/globals.css
@@ -43,3 +43,16 @@ body {
 .delay-200 {
   animation-delay: 200ms;
 }
+
+.cube {
+  transform-style: preserve-3d;
+  transform: rotateX(45deg) rotateY(45deg);
+  perspective: 1000px;
+  perspective-origin: 50% 50%;
+}
+
+@media (hover: hover) {
+  .cube:hover {
+    transform: rotateX(45deg) rotateY(45deg) scale(1.1);
+  }
+}
